cod-tools (unreleased)

  * Added:
    - cif_molecule:
      - command line option to turn off special treatment of disorder groups
        with negative indices.
    - cif_validate:
      - checking if data items from the same category reside in the same loop;
      - reporting of missing parent data items.
  * Changed:
    - cif_validate:
      - updated the range validation logic to always consider the standard
        uncertainty (s.u.) values even if the data item is not formally
        eligible to have an associated s.u. value.
  * Fixed:
    - cif_molecule:
      - removed duplicated option description.
    - cif_validate:
      - corrected the way character ranges are handled.

cod-tools (2.4)

  * Added:
    - COD::CIF::ChangeLog module.
    - COD::CIF::DDL module.
    - COD::CIF::DDL::DDL1 module.
    - COD::CIF::Tags::Manage:
      - accepting CIF format version number in new_datablock();
      - the 'contains_data_item()' subroutine.
    - data/replacement_values/replacement_values.lst
      - several more value replacement rules.
    - cif_tags_in_list:
      - the --exclude-category-names option;
    - cif_validate:
      - a validation message pertaining to quote usage in combination with
        numeric values;
      - a uniqueness constraint check for simple and composite loop references.
  * Changed:
    - COD::AuthorNames:
      - updated several error messages to only display the original author name
        without any modifications;
    - COD::CIF::Data:
      - slightly reworded several warning messages.
    - COD::CIF::Data::AtomList:
      - rewritten dump_atoms_as_cif() using standard CIF printing routines;
      - updated several warning messages.
    - COD::CIF::Data::Check:
      - replaced a composite warning message pertaining to bibliography-related
        data items with several messages of greater specificity.
    - COD::CIF::Parser::Yapp:
      - replaced the COD::ShowStruct module with Data::Dumper
        for debug prints.