@@ -7,6 +7,8 @@ cod-tools (unreleased)
     - cif_validate:
       - checking if data items from the same category reside in the same loop;
       - reporting of missing parent data items.
+    - COD::CIF::DDL::DDL1:
+      - the get_list_constraint_type() and get_dic_item_value() subroutines.
   * Changed:
     - cif_validate:
       - updated the range validation logic to always consider the standard
